# remote-cavity-inspection_open

./: README.md  README.md~
dm_to_dmc/: CMakeLists.txt  CMakeLists.txt~  nodelets.xml  nodelets.xml~  package.xml
dm_to_dmc/include/dm_to_dmc/: dm32_to_dm_nodelet.h
dm_to_dmc/src/: dm32_to_dm_node.cpp  dm32_to_dm_nodelet.cpp
matlab/: endeffector_plots.m  inverse_kinematics_test.m  inverse_kinematics_visualization.m  inverse_kinematics_workspace.m  kalman_test.m  plots_from_bag_all_rovio.m  plots_from_bag_all_sim.m  plots_from_bag_all_vicon.m
matlab/heatmap/: license.txt
rci_cavity_normal/: CMakeLists.txt  nodelets.xml  package.xml
rci_cavity_normal/include/rci_cavity_normal/: cavity_normal_nodelet.h
rci_cavity_normal/src/: cavity_normal_node.cpp  cavity_normal_nodelet.cpp
rci_comm/: CMakeLists.txt  package.xml
rci_comm/msg/: ArmMotorAngles.msg  CavityBox.msg  CavityBoxNormal.msg  Tree.msg  TreeAndCavities.msg  TreeAndCavity.msg
rci_comm/srv/: GetBoxCheckParams.srv  GetCavityNormalParams.srv  GetControllerParams.srv  GetFilterPipelineParams.srv  GetKalmanParams.srv  GetPdParams.srv  GetRealsenseParameters.srv  GetTreeDetectionParams.srv  GetTreeDetectionParams.srv~  InitSeedPoint.srv  InitTwoSeedPoints.srv  LiftArm.srv  SetBoxCheckParams.srv  SetCavityNormalParams.srv  SetControllerParams.srv  SetFilterPipelineParams.srv  SetKalmanParams.srv  SetPdParams.srv  SetTreeDetectionParams.srv  SetTreeDetectionParams.srv~  StartController.srv
rci_controller/: CMakeLists.txt  CMakeLists.txt~  nodelets.xml  nodelets.xml~  package.xml
rci_controller/include/rci_controller/: controller_nodelet.h
rci_controller/src/: controller_node.cpp  controller_nodelet.cpp
rci_description/: CMakeLists.txt  package.xml
rci_description/urdf/: delta_manipulator_with_endeffector.xacro  firefly_rci_picoflexx.gazebo  firefly_rci_picoflexx.gazebo~  rci_picoflexx_base.xacro  rci_picoflexx_base.xacro~
rci_description/urdf/old/: firefly_rci_realsenseF200.gazebo  firefly_rci_realsenseR200.gazebo  rci_realsenseF200_base.xacro  rci_realsenseR200_base.xacro  rci_vi_nomass_base.xacro
rci_filter_pipeline/: CMakeLists.txt  nodelets.xml  package.xml
rci_filter_pipeline/include/rci_filter_pipeline/: filter_pipeline_nodelet.h
rci_filter_pipeline/src/: filter_pipeline_node.cpp  filter_pipeline_nodelet.cpp
rci_gui/: CMakeLists.txt  mainpage.dox  package.xml
rci_gui/include/qcustomplot/: qcustomplot.cpp  qcustomplot.h
rci_gui/include/rci_gui/: base_ros_thread.hpp  cavity_pose_view.hpp  debug_view.hpp  main_window.hpp  sensor_image_view.hpp  sensor_pointcloud_view.hpp  structures.h
rci_gui/src/: base_ros_thread.cpp  cavity_pose_view.cpp  debug_view.cpp  debug_view.cpp~  main.cpp  main_window.cpp  sensor_image_view.cpp  sensor_pointcloud_view.cpp
rci_gui/ui/: main_window.ui
rci_img_tree_detection/: CMakeLists.txt  CMakeLists.txt~  nodelets.xml  nodelets.xml~  package.xml
rci_img_tree_detection/include/rci_img_tree_detection/: tree_cavity_detection_kmeans_nodelet.h
rci_img_tree_detection/src/: tree_cavity_detection_kmeans_node.cpp  tree_cavity_detection_kmeans_nodelet.cpp
rci_inverse_kinematics/: CMakeLists.txt  nodelets.xml  package.xml
rci_inverse_kinematics/include/rci_inverse_kinematics/: inverse_kinematics_nodelet.h
rci_inverse_kinematics/src/: inverse_kinematics_node.cpp  inverse_kinematics_nodelet.cpp
rci_kalman/: CMakeLists.txt  nodelets.xml  package.xml
rci_kalman/include/rci_kalman/: kalman_nodelet.h
rci_kalman/src/: kalman_node.cpp  kalman_nodelet.cpp
rci_launch/: CMakeLists.txt  package.xml
rci_launch/launch/: gui.launch  gui.launch~  rci.launch  rci.launch~  tree_cavity_detection.launch  tree_cavity_detection_kmeans.launch~
rci_launch/resource/: box_check_picoflexx.yaml~  controller_picoflexx.yaml~  filter_pipeline_picoflexx.yaml~  kalman_picoflexx.yaml~  picoflexx_config.yaml  rci.yaml  rci.yaml~  rci_sim.yaml  rci_sim.yaml~  tree_detection_picoflexx.yaml~
rci_pc_cavity_check/: CMakeLists.txt  nodelets.xml  nodelets.xml~  package.xml
rci_pc_cavity_check/include/rci_pc_cavity_check/: box_check_nodelet.h
rci_pc_cavity_check/src/: box_check_node.cpp  box_check_nodelet.cpp
rci_simulator/: CMakeLists.txt  package.xml
rci_simulator/launch/: mav_lee_msf.launch  mav_linear_mpc_msf.launch  mav_linear_mpc_msf.launch~
rci_simulator/models/: basic_bullet_with_tree_cavity.world  basic_bullet_with_tree_cavity_and_trees.world  basic_bullet_with_tree_cavity_and_trees.world~  basic_with_tree_cavity.world~  camera.dae
rci_simulator/resource/: PD_attitude.yaml  linear_mpc.yaml
rci_simulator/src/: start_msf.cpp
remote_cavity_inspection/: CMakeLists.txt  package.xml
