<package>
  <name>rci_description</name>
  <version>2.0.1</version>
  <description>The rotors_description package, provides URDF models.</description>

  <maintainer email="steichk@ethz.ch">Kelly Steich</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
