<?xml version="1.0"?>
<package>
  <name>rci_filter_pipeline</name>
  <version>0.0.0</version>
  <description>The rci_filter_pipeline package</description>

  <maintainer email="steick@ethz.ch">kelly</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>rci_comm</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rci_comm</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
<nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
