<?xml version="1.0"?>
<package>
  <name>rci_inverse_kinematics</name>
  <version>0.0.0</version>
  <description>The rci_inverse_kinematics package</description>

  <maintainer email="steick@ethz.ch">kelly</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>rci_comm</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>rci_comm</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
<nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
