<package>
  <name>rci_simulator</name>
  <version>1.0.0</version>
  <description>The rci_simulator package</description>

  <maintainer email="steichk@student.ethz.ch">Kelly Steich</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_fusion_comm</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_fusion_comm</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_ros</build_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/> 
  </export>

</package>
